updated add popup, and implemented/created PhoneBillModel:

--- a/PhoneBill-Android/build.gradle
+++ b/PhoneBill-Android/build.gradle
@@ -22,6 +22,9 @@ allprojects {
         maven {
             url 'https://dl.bintray.com/davidwhitlock/maven'
         }
+        maven {
+            url "https://jitpack.io"
+        }
     }
 }
 
