--- a/PhoneBill-Android/app/src/main/AndroidManifest.xml
+++ b/PhoneBill-Android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Readme"></activity>
+        <activity android:name=".PrintResults"></activity>
+        <activity android:name=".Readme" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
